--- a/.github/workflows/reactcicd1.yml
+++ b/.github/workflows/reactcicd1.yml
@@ -34,8 +34,8 @@ jobs:
       # Configure Git identity
       - name: Configure Git
         run: |
-          git config --global user.name "Alohith76"
-          git config --global user.email "alohith87@gmail.com",
+          git config --global user.name "avamsi46"
+          git config --global user.email "anativamsi46@gmail.com",
 
       # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
