--- a/.github/workflows/reactcicd1.yml
+++ b/.github/workflows/reactcicd1.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 permissions:
-  contents: write
+  contents: write  
 
 jobs:
   build-and-deploy:
@@ -31,7 +31,16 @@ jobs:
       - name: Build the project
         run: npm run build
 
+      # Configure Git identity
+      - name: Configure Git
+        run: |
+          git config --global user.name "avamsi46"
+          git config --global user.email "anativamsi46@gmail.com",
+
+      # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npm run deploy
+        run: |
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
+          npm run deploy
